fix foradding spacing between letters for headers

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,6 @@ h1,h2,h3,h4
 {
     font-family: 'Montserrat', sans-serif;
     color: #000;
-    letter-spacing: -1px;
     margin-bottom: 0px;
     font-weight: normal;
 }
